# skelo

./: .gitignore  LICENSE  README.md  dev  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
docs/source/: conf.py  index.rst
skelo/: __init__.py
skelo/model/: __init__.py  base.py  elo.py  glicko2.py
skelo/utils/: elo_data.py
tests/skelo/model/: test_elo.py
