[build-system]
requires = [
  "setuptools>=61.0",
  "numpy",
  "sklearn",
]
build-backend = "setuptools.build_meta"

[project]
name = "skelo"
version = "0.0.1"
authors = [
  { name="Michael B Hynes", email="mike.hynes.rhymes@gmail.com" },
]
description = "An implementation of the Elo rating system with a sklearn-compatible interface"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.urls]
"Homepage" = "https://github.com/mbhynes/skelo"
"Bug Tracker" = "https://github.com/mbhynes/skelo/issues"
