[build-system]
requires = [
  "setuptools>=61.0",
  "numpy",
  "sklearn",
  "pandas",
  "glicko2",
]
build-backend = "setuptools.build_meta"

[project]
name = "skelo"
version = "0.1.0"
authors = [
  { name="Michael B Hynes", email="mike.hynes.rhymes@gmail.com" },
]
description = "An implementation of the Elo rating system with a sklearn-compatible interface"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.urls]
"Homepage" = "https://github.com/mbhynes/skelo"
"Bug Tracker" = "https://github.com/mbhynes/skelo/issues"
